k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-namespace
  labels:
    name: petclinic-namespace
    app: petclinic
