k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: petclinic-namespace
spec:
  selector:
    app: petclinic
  type: ClusterIP
  ports:
    - name: main-app
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: admin-port
      port: 5555
      targetPort: 8000
      protocol: TCP
    - name: api-port
      port: 6666
      targetPort: 8000
      protocol: TCP
